--- a/CSIS2440/Assignments/AssignmentCookies/index.html
+++ b/CSIS2440/Assignments/AssignmentCookies/index.html
@@ -9,13 +9,65 @@ and open the template in the editor.
         <title>Craft Cookie Cottage</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/index.css" rel="stylesheet" type="text/css"/>
+        <script src="javaScript/index.js" type="text/javascript"></script>
     </head>
     <body>
-        <div>Craft Cookie Cottage</div>
-        <div>Home
-        Product Information
-        Sign up
-        Login
-        Order Online</div>
+        <article>
+            <!--            navBar-->
+            <header class="header__container">
+
+                <nav class = "primary-nav">
+
+                    <a href="index.html" class ="btn btn-alt">Home</a>
+                    <a href="productinfo.php" class ="btn btn-alt">Product Information</a>
+                    <a href="SignUp.html" class ="btn btn-alt">Sign up</a>
+                    <a href="login.php" class ="btn btn-alt">Login</a>
+                    <a href="order.html" class ="btn btn-alt">Order Online</a>
+
+
+                </nav>
+
+            </header>
+
+            <div class="home">
+                <div class="home__container">
+                    <img class="home__image" src="img/cookie2.jpg" alt="">
+                    <div class="home__aboutUs">
+                        <p class="home__firstP">
+                            Tender and chewy with crispy edges and gooey centers, our freshly baked cookies 
+                            are sweet perfection. Handmade with the finest butter, cream, chocolate and other 
+                            craveable goodies, there’s a favorite flavor for everyone! And our gluten-free, 
+                            keto and vegan varieties are just as yummy!<BR>
+                            <BR>
+                        </p>
+                        <p class="home__secP">
+                            A fun way to buy cookies online, your receiver gets to pick their own flavors 
+                            from our mouthwatering list. Bursting with fresh-baked crunch and creaminess, 
+                            these aren’t as good as grandma used to make...they’re better!<BR>
+                            <BR>
+                            </p>
+                            <p class="home__thiP">
+                            What started with a generations-old family recipe in , is now the sweet spot 
+                            for happiness and joy. We are still the home of the original Peanutbutter Cookie, just 
+                            re-imagined with life’s sweet moments as our inspiration. At Craft Cookie Cottage, 
+                            we believe that pure, simple delight is part of living a full life.  We promise 
+                            to treat you to bites of bliss that prove how sweet life can be. We bake your 
+                            world a better place with simple and inspired treats: fresh-baked cookies 
+                            delightfully designed and customized for any craving or celebration.  Passionate 
+                            bakers are devoted to hand-crafting goodies that engage your senses and a 
+                            fun-filled ambiance where everyday elements tempt your sweet tooth. With bakeries 
+                            across the Western USA, in your neighborhood, and treats available to ship right to 
+                            your door, the sweet spot is always close to home.
+                        </p>
+
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </article>
     </body>
 </html>
